--- a/src/views/Styles/landingPage.css
+++ b/src/views/Styles/landingPage.css
@@ -1,3 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Homenaje&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Homenaje&family=Poppins:wght@500&display=swap');
+body{
+  background-color: #1F1D2B;
+}
+.landing-page{
+  background-color: #1F1D2B;
+  width: 100%;
+}
+.landing-page::before{
+  content: "";
+  position: absolute;
+  width: 323px;
+  height: 113px;
+  left: 70%;
+  top: 138px;
+  filter: blur(190px);
+  background-color: #FB37ff;
+}
+
+.landing-page::after{
+ content: "";
+ filter: blur(160px);
+ background-color: #18B2DE;
+ position: absolute;
+ width: 323px;
+ height: 123px;
+ left: 0%;
+ top: 180px;
+}
+
 a {
     text-decoration: none;
 }
@@ -7,27 +38,28 @@ ul {
     margin: 0;
 }
 .navBarContainer, .mainContainer {
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    /* padding-left: 0px;
+    padding-right: 0px; */
+    /* margin-left: auto;
+    margin-right: auto; */
+    width: 100%;
 }
 /* Small */
 @media (min-width: 768px) {
     .navBarContainer, .mainContainer {
-      width: 750px;
+      width: 100%;
     }
 }
 /* Medium */
 @media (min-width: 992px) {
     .navBarContainer, .mainContainer {
-      width: 970px;
+      width: 100%;
     }
 }
   /* Large */
   @media (min-width: 1200px) {
     .navBarContainer, .mainContainer {
-      width: 1170px;
+      width: 100%;
     }
 }
 .landing-page header {
@@ -45,6 +77,8 @@ ul {
 .navBarContainer {
     display: flex;
     align-items: center;
+    width: 100%;
+    height: 100%;
     justify-content: space-between;
 }
 
@@ -55,10 +89,14 @@ ul {
     }
   }
   .landing-page header .logo {
-    color: #5d5d5d;
-    font-style: italic;
-    text-transform: uppercase;
-    font-size: 20px;
+   font-family: 'Poppins';
+   font-style: normal;
+   font-weight: 700;
+   font-size: 28px;
+   color: transparent; /* Set text color to transparent */
+   background-image: linear-gradient(93.51deg, #9B51E0 2.84%, #3081ED 99.18%);
+   -webkit-background-clip: text; /* Clip the background to the text */
+   background-clip: text; /* Clip the background to the text */
 }
 
 @media (max-width: 767px) {
@@ -68,8 +106,11 @@ ul {
     }
   }
   .navLinks {
+    font-family: 'Poppins';
     display: flex;
     align-items: center;
+    gap: 15px;
+    font-weight: bold;
   }
 
   @media (max-width: 767px) {
@@ -82,8 +123,9 @@ ul {
 
   .navLinks {
     margin-left: 30px;
-    color: #5d5d5d;
+    color: #d2d1d1;
     cursor: pointer;
+    font-family: 'Poppins';
     transition: .3s;
   }
   @media (max-width: 767px) {
@@ -92,10 +134,13 @@ ul {
     }
   }
   .navLinks li:last-child {
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 10px 20px;
+    /* margin-right: -10%; */
     color: #FFF;
-    background-color: #6c63ff;
+    font-family: 'Poppins';
+    font-size: 14px;
+    background: linear-gradient(93.51deg, #9B51E0 2.84%, #3081ED 99.18%);
   }
   .navLinkss li:not(:last-child):hover {
     color: #6c63ff;
@@ -105,8 +150,9 @@ ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 140px;
-    min-height: calc(100vh - 80px);
+    gap: 10px;
+    width: 100%;
+    /* min-height: calc(100vh - 80px); */
   }
 
   @media (max-width: 767px) {
@@ -115,38 +161,417 @@ ul {
       min-height: calc(100vh - 101px);
       justify-content: center;
       flex-direction: column-reverse;
+      width: 100%;
     }
   }
 
   @media (max-width: 767px) {
     .mainInfo {
       text-align: center;
-      margin-bottom: 15px 
+      margin-bottom: 15px;
+      align-items: center;
     }
   }
 
+  .mainInfo{
+    flex: 1;
+    /* width: 39%; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .mainInfo h1 {
-    color: #5d5d5d;
-    font-size: 44px;
+    /* text-align: center; */
+    /* margin-top: 0%; */
+    margin-top: 4%;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 45px;
+  }
+
+  .mainInfo h2 {
+    /* text-align: center; */
+    font-weight: lighter;
+    margin-top: -3%;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 20px;
   }
 
   .mainInfo p {
+    /* text-align: center; */
     margin: 0;
-    line-height: 1.6;
-    font-size: 15px;
-    color: #5d5d5d;
+    line-height: 1.3;
+    font-size: 16px;
+    /* font-family: 'Puppins'; */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: bold;
+    color: #d2d1d1;
+  }
+
+  .devideInfo{
+    width: 21em;
+    margin-top: -1%;
+  }
+
+  .content{
+    width: 100%;
   }
 
   .mainInfo button {
     border: 0;
-    border-radius: 20px;
+    border-radius: 8px;
     padding: 12px 30px;
-    margin-top: 30px;
+    margin-top: 14px;
     cursor: pointer;
+    /* font-family: 'Puppins'; */
+    font-size: medium;
+    font-weight: bold;
     color: #FFF;
-    background-color: #6c63ff;
+    background: linear-gradient(93.51deg, #9B51E0 25.84%, #3081ED 99.18%);
   }
 
   .landing-page .content .image img {
     max-width: 100%;
-  } 
+  }
+
+  .display{
+    animation-name: rightslide;
+    animation-duration: 0.8s;
+    padding: 14px;
+    border: 1px solid;
+    background: linear-gradient(169.44deg, rgba(58, 129, 191, 0.08) 1.85%, rgba(65, 48, 90, 0.08) 98.72%);
+    border-radius: 35px;
+    max-height: 450px;
+    width: 40%;
+    margin-top: 1%;
+    /* max-width: 50%; */
+    overflow: hidden;
+    margin-right: 0%;
+  }
+
+  .display-nft{
+    object-fit: cover;
+    flex-shrink: 0;
+    width: 100%;
+    height: 300px;
+    border-radius: 20px;
+  }
+
+
+  /** About Section **/
+  #about-section {
+    background-color: transparent; /* Adjust the alpha (opacity) value as needed for the glass effect */
+    padding: 50px 0; /* Add padding to create space around the content */ /* Apply a blur effect to the background */
+    position: relative; /* Add position relative to create stacking context */
+    z-index: 1; /* Set a z-index to make sure it's on top of the body background */
+    border-radius: 20px;
+  }
+  
+  .about-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    text-align: center;
+    background: transparent;
+  }
+
+  .aboutDevider{
+    width: 21em;
+    margin-top: -0.5%;
+  }
+
+  .rowFirst{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .about-title {
+    font-size: 45px;
+    margin-bottom: 0px;
+    font-family: 'Poppins';
+    font-style: normal;
+    -webkit-background-clip: text;
+    background-clip: text;
+    font-weight: bold;
+    color: transparent;
+    background-image: linear-gradient(93.51deg, #9B51E0 2.84%, #3081ED 99.18%);
+  }
+  
+  .block {
+    width: 200px;
+    height: 3px;
+    background-color: #6c63ff;
+    /* margin: 0 auto 30px; */
+  }
+
+  .contact-block{
+    width: 250px;
+    height: 3px;
+    background-color: #6c63ff;
+  }
+  
+  .about-desc{
+    text-align: center;
+    font-weight: lighter;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 18px;
+  }
+
+  .contact-desc{
+    text-align: center;
+    font-weight: lighter;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 15px;
+  }
+  .about-descs{
+    text-align: center;
+    font-weight: lighter;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 20px;
+  }
+
+  .about-descp{
+    text-align: center;
+    font-weight: lighter;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 14px;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 0px;
+    gap: 10px; /* Add some spacing between columns */
+    margin-bottom: 1%;
+  }
+  
+  .column {
+    flex: 1;
+    max-width: calc(50% - 20px); /* Calculate width for two columns with spacing */
+    margin: 0 10px; /* Add margin for spacing */
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.18);
+    border-radius: 5px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+  
+  h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  .icon {
+    font-size: 32px;
+    background-image: linear-gradient(93.51deg, #9B51E0 2.84%, #3081ED 99.18%);
+    -webkit-background-clip: text; /* Clip the text to the background */
+    color: transparent; /* Make the text color transparent */
+    margin-right: 2%;
+  }
+  
+  @media (max-width: 768px) {
+    .column {
+      flex: 1 0 100%;
+      max-width: 100%;
+      margin: 0;
+    }
+  }
+
+
+  /* Contact Form Styles */
+.contact-form {
+  background-color: transparent;
+  padding: 20px;
+  border-radius: 5px;
+  /* box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1); */
+  text-align: center;
+  max-width: 650px;
+  margin: 0 auto;
+}
+
+.contact-form label {
+  font-weight: bold;
+  color: #d2d1d1;
+  font-family: 'Poppins';
+  font-weight: lighter;
+  font-style: normal;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  color: transparent;
+  background-color: transparent;
+  border: none; /* Remove the border */
+  border-bottom: 1px solid #fff; /* Add a white bottom border */
+  border-radius: 3px;
+}
+
+
+/* Footer Section */
+.footer-wrapper {
+  background-color: transparent;
+  /* border-radius: 6px 6px 10px 10px;
+  box-shadow: 5px 20px 50px #000; */
+  height: fit-content;
+  margin-bottom: 0;
+  /* padding: 30px; */
+}
+
+.footer-container {
+  margin-top: 5%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0px;
+  height: fit-content;
+  margin-left: 0%;
+  align-items: center;
+  justify-items: center;
+}
+
+.footer-bottom-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  margin-left: 0.5%;
+}
+
+.footer-title {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  color: transparent;
+  background-image: linear-gradient(93.51deg, #9B51E0 2.84%, #3081ED 99.18%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  margin-left: -5%;
+  margin-bottom: -3%;
+}
+
+.footer-social {
+  height: fit-content;
+}
+
+.footer-social-icons {
+  display: flex;
+  gap: 0.7rem;
+  margin-bottom: 0;
+}
+
+.icons-holder {
+  border-radius: 50%;
+}
+
+.icons {
+  font-size: 26px;
+  background-image: linear-gradient(93.51deg, #9B51E0 2.84%, #3081ED 99.18%);
+  -webkit-background-clip: text; /* Clip the text to the background */
+  color: transparent; /* Make the text color transparent */
+}
+
+.footer-follow-title {
+  text-align: center;
+    font-weight: bold;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 18px;
+}
+
+.footer-call-title {
+  text-align: center;
+    font-weight: bold;
+    margin-left: 0%;
+    margin-bottom: -10%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 18px;
+}
+
+.footer-bottom-text {
+    font-weight: lighter;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 8px;
+}
+
+.footer-divider {
+  margin-bottom: 0;
+  height: 0.1px;
+}
+
+.subscribe-email {
+  text-align: center;
+  height: 1%;
+  border-bottom: 1.3px solid #c9b1f6;
+  border-radius: 7px;
+  color: #573b8a;
+}
+
+.subscribe-button {
+  height: 1%;
+  background-image: linear-gradient(93.51deg, #9B51E0 2.84%, #3081ED 99.18%);
+  font-size: small;
+  color: #c9b1f6;
+  border-bottom: 1.3px solid #c9b1f6;
+  border-radius: 3px;
+}
+
+.subscribe-form {
+  margin-bottom: -5%;
+  height: fit-content;
+}
+
+.submitButton{
+  border: 0;
+  border-radius: 8px;
+  padding: 12px 30px;
+  /* margin-top: 14px; */
+  cursor: pointer;
+  /* font-family: 'Puppins'; */
+  font-size: medium;
+  font-weight: bold;
+  color: #FFF;
+  background: linear-gradient(93.51deg, #9B51E0 25.84%, #3081ED 99.18%);
+}
+
+.number-phone{
+  font-weight: lighter;
+    margin-left: 0%;
+    color: #d2d1d1;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 18px;
+    margin-bottom: -8%;
+}
