minimalistic design dashboard + editor + registration

--- a/src/views/Styles/Pages/landingPage.html
+++ b/src/views/Styles/Pages/landingPage.html
@@ -16,7 +16,7 @@
         <header>
             <div class="navBarContainer">
                         <a href="#" class="logo">
-                            BLUEPRINT
+                            SIDESIGN
                         </a>
                         <ul class="navLinks">
                             <li>Home</li>
@@ -48,7 +48,7 @@
                 <h1 class="about-title">About Us</h1>
                 <div class="block"></div>
                 <p class="about-desc">
-                    At Blueprint, we're dedicated to revolutionizing the world of interior design. Our vision is to empower everyone with the ability to create stunning home designs effortlessly, thanks to the power of Artificial Intelligence.
+                    At SIDESIGN, we're dedicated to revolutionizing the world of interior design. Our vision is to empower everyone with the ability to create stunning home designs effortlessly, thanks to the power of Artificial Intelligence.
                 </p>
               </div>
               <div class="row">
