--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -119,7 +119,7 @@ body {
 }
 
 .account-info-name {
-  font-size: 14px;
+  font-size: 10px;
   color: var(--sidebar-main-color);
   margin: 0 8px;
   overflow: hidden;
@@ -164,7 +164,7 @@ body {
 
 .app-content-headerText {
   color: var(--app-content-main-color);
-  font-size: 24px;
+  font-size: 20px;
   line-height: 32px;
   margin: 0;
 }
@@ -172,7 +172,7 @@ body {
 .app-content-headerButton {
   background-color: var(--action-color);
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 24px;
   border: none;
   border-radius: 4px;
@@ -223,7 +223,7 @@ body {
   background-color: var(--app-content-secondary-color);
   border: 1px solid var(--app-content-secondary-color);
   color: var(--app-content-main-color);
-  font-size: 14px;
+  font-size: 12px;
   line-height: 24px;
   border-radius: 4px;
   padding: 0px 10px 0px 32px;
@@ -261,7 +261,7 @@ body {
   display: flex;
   align-items: center;
   color: var(--app-content-main-color);
-  font-size: 14px;
+  font-size: 10px;
   margin-left: 8px;
   cursor: pointer;
 }
@@ -365,7 +365,7 @@ body {
 
 .filter-menu label {
   display: block;
-  font-size: 14px;
+  font-size: 12px;
   color: var(--app-content-main-color);
   margin-bottom: 8px;
 }
@@ -386,7 +386,7 @@ body {
 }
 
 .filter-menu select option {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 /* .light .filter-menu select {
@@ -463,7 +463,7 @@ body {
   flex: 1;
   padding: 8px 16px;
   color: var(--app-content-main-color);
-  font-size: 14px;
+  font-size: 10px;
   display: flex;
   align-items: center;
 }
@@ -471,6 +471,7 @@ body {
 .tableView .product-cell img {
   width: 32px;
   height: 32px;
+  object-fit: cover;
   border-radius: 6px;
   margin-right: 6px;
 }
@@ -512,7 +513,7 @@ body {
   display: flex;
   align-items: center;
   padding: 4px 8px;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .status:before {
@@ -594,7 +595,7 @@ body {
 
 .gridView .product-cell {
   color: var(--app-content-main-color);
-  font-size: 14px;
+  font-size: 10px;
   margin-bottom: 8px;
 }
 
@@ -605,7 +606,7 @@ body {
 }
 
 .gridView .product-cell.image span {
-  font-size: 18px;
+  font-size: 14px;
   line-height: 24px;
 }
 
@@ -650,7 +651,7 @@ body {
 .pagination-button {
   border: 1px solid var(--app-content-secondary-color);
   color: var(--app-content-main-color);
-  font-size: 12px;
+  font-size: 10px;
   line-height: 24px;
   width: 24px;
   height: 24px;
@@ -689,7 +690,7 @@ body {
   display: flex;
   align-items: center;
   padding: 4px 8px;
-  font-size: 15px;
+  font-size: 12px;
   background-color: rgba(89, 113, 157, 0.2);
 }
 
@@ -701,10 +702,10 @@ body {
   background-color: var(--app-content-secondary-color);
   position: absolute;
   top: calc(0% + 16px);
-  right: 5%;
+  right: 8%;
   border-radius: 4px;
   padding: 8px;
-  width: 330px;
+  width: 250px;
   z-index: 2;
   box-shadow: var(--filter-shadow);
   visibility: hidden;
@@ -726,7 +727,7 @@ body {
 }
 
 .project-creator-layer {
-  margin-top: 2%;
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -735,11 +736,12 @@ body {
 .project-creator.active {
   visibility: visible;
   opacity: 1;
-  top: calc(7% + 7px);
+  top: calc(9% + 7px);
 }
 
 .project-creator-title{
   text-align: center;
+  font-size: 14px;
   color: var(--app-content-main-color);
 }
 
@@ -750,7 +752,7 @@ body {
 }
 
 .project-creator-input-group label {
-  font-size: 12px;
+  font-size: 10px;
   color: var(--app-content-main-color);
 }
 
@@ -758,7 +760,7 @@ body {
   padding: 5px;
   border: 1px solid var(--app-content-main-color);
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 10px;
   color: var(--app-content-main-color);
 }
 
@@ -766,11 +768,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: auto;
 }
 
 .image-placeholder img {
   max-width: 100%;
-  height: auto;
 }
 
 .image-upload-label {
