login signup and checkUserCredit improved + profile page to manage and edit the profile with design  + logout function ]]]

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,8 +28,8 @@
                 <input type="file" id="photo-input" accept="image/*" class="snip1344-input" />
               </div>
             <div class="profile-card-ctr">
-              <button class="profile-card__button button--blue js-message-btn">Cancel</button>
-              <button class="profile-card__button button--orange">Save</button>
+              <button class="profile-card__button button--blue js-message-btn" id="cancelButton">Cancel</button>
+              <button class="profile-card__button button--orange" id="saveButton">Save</button>
             </div>
           </div>
       
