--- a/public/styles/early-access.css
+++ b/public/styles/early-access.css
@@ -1,3 +1,129 @@
+/* Nav bar */
+
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.navBarContainer, .mainContainer {
+  /* padding-left: 0px;
+  padding-right: 0px; */
+  /* margin-left: auto;
+  margin-right: auto; */
+  width: 100%;
+}
+/* Small */
+@media (min-width: 768px) {
+  .navBarContainer, .mainContainer {
+    width: 100%;
+  }
+}
+/* Medium */
+@media (min-width: 992px) {
+  .navBarContainer, .mainContainer {
+    width: 100%;
+  }
+}
+/* Large */
+@media (min-width: 1200px) {
+  .navBarContainer, .mainContainer {
+    width: 100%;
+  }
+}
+.landing-page header {
+  min-height: 80px;
+  display: flex;
+}
+
+@media (max-width: 767px) {
+  .landing-page header {
+    min-height: auto;
+    display: initial;
+  }
+}
+
+.navBarContainer {
+  display: flex;
+  width: 100%;
+  height: 5%;
+  /* position: fixed; */
+  z-index: 1000; /* Set a high z-index value */
+  top: 0;
+  justify-content: space-around;
+  align-items: start;
+  margin-top: 20px;
+  border-radius: 50px;
+}
+
+@media (max-width: 767px) {
+  .navBarContainer {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+.landing-page header .logo {
+ font-family: 'Poppins';
+ font-style: normal;
+ font-weight: 700;
+ font-size: 23px !important;
+ color: #2589ff; /* Set text color to transparent */
+ background-image: #2589ff; /* Set the background color to the text color */
+ -webkit-background-clip: text; /* Clip the background to the text */
+ background-clip: text; /* Clip the background to the text */
+}
+
+@media (max-width: 767px) {
+  .landing-page header .logo {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+.navLinks {
+  font-family: 'Poppins';
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-weight: bold;
+}
+
+@media (max-width: 767px) {
+  .navLinks {
+    text-align: center;
+    gap: 10px;
+  }
+}
+
+
+.navLinks {
+  margin-left: 30px;
+  color: #fefefe;
+  cursor: pointer;
+  font-family: 'Poppins';
+  transition: .3s;
+}
+.navLinks li{
+  font-size: 12px;
+}
+.navLinks li:last-child {
+  border-radius: 20px;
+  padding: 10px 20px;
+  /* margin-right: -10%; */
+  color: #ffffff;
+  font-family: 'Poppins';
+  font-size: 10px !important;
+  background: #2589ff;
+}
+@media (max-width: 767px) {
+  .navLinks li {
+    margin-left: auto;
+  }
+}
+.navLinkss li:not(:last-child):hover {
+  color: #6c63ff;
+}
 *, *::after, *::before {
     margin: 0;
     padding: 0;
@@ -18,7 +144,6 @@
   }
   /**/
   .main {
-    opacity: 0.7;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -79,7 +204,6 @@
     object-fit: contain;
     width: 30px;
     margin: 0 5px;
-    opacity: 0.5;
     transition: 0.15s;
   }
   .form__icon:hover {
@@ -141,6 +265,7 @@
     border-radius: 25px;
     margin-top: 50px;
     font-weight: 700;
+    cursor: pointer;
     font-size: 14px;
     letter-spacing: 1.15px;
     /* background-image: repeating-linear-gradient(150deg, #ffb338 0%, #3e2904 100%, #ffb338 52%); */
@@ -149,6 +274,11 @@
     box-shadow: 8px 8px 16px #d1d9e6, -8px -8px 16px #f9f9f9;
     border: none;
     outline: none;
+    transition: background-color .2s ease;
+  }
+  .button:hover {
+    transform: scale(0.985);
+    transition: 0.25s;
   }
   /**/
   .a-container {
@@ -239,18 +369,6 @@
   .is-gx {
     animation: is-gx 1.25s;
   }
-  .bg-video-wrap {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 100vh;
-    background: url(../assets/Ben-Robots.jpg) no-repeat center center/cover;
-  }
-  video {
-    min-width: 100%;
-    min-height: 100vh;
-    z-index: 1;
-  }
   .overlay {
     width: 100%;
     height: 100vh;
@@ -259,7 +377,7 @@
     left: 0;
     background-image: linear-gradient(45deg, rgba(0,0,0,.3) 50%, rgba(0,0,0,.7) 50%);
     background-size: 3px 3px;
-    z-index: 2;
+    /* z-index: 2; */
   }  
   @keyframes is-gx {
     0%, 10%, 100% {
