--- a/public/styles/landingPage.css
+++ b/public/styles/landingPage.css
@@ -63,7 +63,6 @@ ul {
     }
 }
 .landing-page header {
-    min-height: 80px;
     display: flex;
 }
 
@@ -81,16 +80,18 @@ ul {
     /* position: fixed; */
     z-index: 1000; /* Set a high z-index value */
     top: 0;
-    justify-content: space-around;
-    align-items: start;
-    margin-top: 20px;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 15px;
     border-radius: 50px;
 }
 
 @media (max-width: 767px) {
     .navBarContainer {
       flex-direction: column;
-      justify-content: center;
+      /* justify-content: center; */
+      justify-content: space-evenly;
+
     }
   }
   .landing-page header .logo {
@@ -562,6 +563,7 @@ ul {
   background-image: repeating-linear-gradient(650deg, #ffb338 0%, #3e2904 100%, #ffb338 52%);
 }
 .hero-eyebrow-2{
+  /* opacity: 0.7; */
   font-family: 'Degular Display', Helvetica, Arial, sans-serif;
   font-weight: 700;
   font-size: 95px;
@@ -570,6 +572,7 @@ ul {
   margin-bottom: 120px;
 }
 .hero-eyebrow{
+  /* opacity: 0.7; */
   font-family: 'Degular Display', Helvetica, Arial, sans-serif;
   font-size: 22px;
   font-weight: 700;
@@ -593,11 +596,11 @@ ul {
   transform: scale(0.985);
   transition: 0.25s;
 }
-.switch__button:active, .switch__button:focus {
+/* .switch__button:active, .switch__button:focus {
   box-shadow: 2px 2px 6px #d1d9e6, -2px -2px 6px #f9f9f9;
   transform: scale(0.97);
   transition: 0.25s;
-}
+} */
 .button {
   width: 480px;
   height: 75px;
@@ -614,18 +617,31 @@ ul {
   display: inline-block;
   transition: background-color .2s ease;
 }
+/* Style for the button */
+.custom-overlay {
+  position: absolute;
+  top: 10px; /* Adjust the top position as needed */
+  right: 10px; /* Adjust the right position as needed */
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  z-index: 1; /* Set a z-index value to ensure it's above the video */
+}
 .bg-video-wrap {
   position: relative;
   overflow: hidden;
   width: 100%;
   height: 100vh;
-  background: url(../assets/Ben-Robots.jpg) no-repeat center center/cover;
+  /* background: url(../assets/Ben-Robots.jpg) no-repeat center center/cover; */
 }
 video {
   min-width: 100%;
   min-height: 100vh;
   z-index: 1;
 }
+
 .overlay {
   width: 100%;
   height: 100vh;
@@ -668,21 +684,23 @@ video {
 .demos-video{
   width: 100%;
   height: 100%;
-  min-height: 70vh;
+  min-height: 56vh;
   border-radius: 14px;
   overflow: hidden;
   margin-top: 5%;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
 .custom-input {
-  display: inline-block;
+  display: flex;
   padding: 10px;
   border: 1px solid #915eff;
   box-shadow: 0 0 250px rgba(145,94,255,.25);
   font-family: Spline Sans Mono;
   padding: 16px 24px;
   border-radius: 10px;
-  width: 400px;
+  /* width: 400px; */
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .custom-input input {
@@ -729,21 +747,30 @@ video {
   color: #9a9999;
   margin-bottom: 20px;
 }
+/* .video{ */
+  /* object-fit: contain;
+  overflow-clip-margin: content-box;
+  overflow: clip;
+  width: 100%;
+  display: block;
+  border-radius: 12px; */
+/* } */
+.video ::after, .video ::before {
+  box-sizing: border-box;
+}
+
+
 .video-overlay {
   opacity: 1;
   position: absolute;
-  top: 0;
+  top: 15%;
   bottom: 0;
-  left: 0;
+  left: -300px;
   right: 0;
   margin: auto;
-  width: 1000px;
-  min-width: 1000px;
-  min-height: 600px;
-  height: 600px;
-  padding: 25px;
+  max-width: 60%;
+  padding: 5px;
   border-radius: 12px;
-  overflow: hidden;
 }
 @media (max-width: 1200px) {
   .video-overlay {
@@ -764,4 +791,7 @@ video {
   .video-overlay {
     transform: scale(0.4);
   }
+}
+.contact-subtitile{
+  text-align: center;
 }
